<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context=".HowToPlay">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_to_play"
        android:textColor="@color/colorText"
        android:fontFamily="@font/montserrat"
        android:textSize="24sp"
        android:layout_gravity="center"/>

    <TextView
        android:text="@string/howtoplay1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorText"
        android:fontFamily="@font/montserrat"
        android:textSize="18sp"
        android:layout_gravity="center"/>

    <TextView
        android:text="@string/howtoplay2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorText"
        android:fontFamily="@font/montserrat"
        android:textSize="18sp"
        android:layout_gravity="center"/>

    <TextView
        android:text="@string/howtoplay3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorText"
        android:fontFamily="@font/montserrat"
        android:textSize="18sp"
        android:layout_gravity="center"/>

    <TextView
        android:text="@string/howtoplay4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorText"
        android:fontFamily="@font/montserrat"
        android:textSize="18sp"
        android:layout_gravity="center"/>

</LinearLayout>