<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context=".MainMenu">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_menu"
        android:textColor="@color/colorText"
        android:fontFamily="@font/montserrat"
        android:textSize="24sp"
        android:layout_gravity="center"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/play_game"
        android:fontFamily="@font/montserrat"
        android:background="@drawable/btn_ver1"
        android:textColor="@color/colorText"
        android:textAllCaps="false"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:onClick="play"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/how_to_play"
        android:fontFamily="@font/montserrat"
        android:background="@drawable/btn_ver1"
        android:textColor="@color/colorText"
        android:textAllCaps="false"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:onClick="htp"/>

    <Button
        android:id="@+id/changeMyLang"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/changeLang"
        android:fontFamily="@font/montserrat"
        android:background="@drawable/btn_ver1"
        android:textColor="@color/colorText"
        android:textAllCaps="false"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:fontFamily="@font/montserrat"
        android:background="@drawable/btn_ver1"
        android:textColor="@color/colorText"
        android:textAllCaps="false"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:onClick="about"/>
</LinearLayout>