<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context=".PlayGame">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_game"
        android:textColor="@color/colorText"
        android:fontFamily="@font/montserrat"
        android:textSize="24sp"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/btn_pvsp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/pvsp"
        android:layout_gravity="center"
        android:fontFamily="@font/montserrat"
        android:background="@drawable/btn_ver1"
        android:textColor="@color/colorText"
        android:textAllCaps="false"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btn_pvsc"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/pvsc"
        android:layout_gravity="center"
        android:fontFamily="@font/montserrat"
        android:background="@drawable/btn_ver1"
        android:textColor="@color/colorText"
        android:textAllCaps="false"
        android:layout_marginTop="20dp"/>
</LinearLayout>