<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="horizontal"
    tools:context=".About">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/satu"
            android:background="#000"
            android:layout_width="match_parent"
            android:layout_height="500dp">
            <LinearLayout
                android:id="@+id/biru"
                android:background="#000"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:orientation="vertical">
                <ImageView
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/ic_circlecross_white"/>//ganti tulisan circle fource
            </LinearLayout>

            <LinearLayout
                android:layout_below="@+id/biru"
                android:id="@+id/mantab"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp">
                <LinearLayout
                    android:orientation="horizontal"
                    android:paddingLeft="108dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textStyle="bold"
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="32dp"
                        android:text="@string/pt"
                        android:textColor="#fff"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_marginTop="25dp"
                    android:orientation="horizontal"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_gravity="center_vertical"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:background="@drawable/firaz"/>
                    <TextView
                        android:textStyle="bold"
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="20dp"
                        android:text="@string/frz"
                        android:textColor="#fff"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_marginTop="25dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_gravity="center_vertical"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:background="@drawable/ridho"/>
                    <TextView
                        android:textStyle="bold"
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ido"
                        android:paddingLeft="20dp"
                        android:textColor="#fff"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_marginTop="25dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_gravity="center_vertical"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:background="@drawable/elshinta"/>
                    <TextView
                        android:textStyle="bold"
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/els"
                        android:paddingLeft="20dp"
                        android:textColor="#fff"/>
                </LinearLayout>
            </LinearLayout>
            <Button
                android:layout_below="@+id/mantab"
                android:textColor="@color/colorText"
                android:textSize="20sp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/btn_ver1"
                android:layout_marginTop="35dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:text="@string/tq"/>
        </RelativeLayout>

    </ScrollView>

</LinearLayout>