<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context=".PlayerVersusComputer">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <TextView
            android:id="@+id/name_p1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:fontFamily="@font/montserrat"
            android:textColor="@color/colorText"
            android:text="@string/cpu_pvc"
            android:textSize="25sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name_p2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="70dp"
            android:fontFamily="@font/montserrat"
            android:textColor="@color/colorText"
            android:textSize="25sp"
            android:text="@string/you_pvc"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/score_p1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@string/default_score"
            android:textColor="@color/colorText"
            android:textSize="25sp"
            app:layout_constraintLeft_toLeftOf="@id/name_p1"
            app:layout_constraintTop_toBottomOf="@+id/name_p1" />

        <TextView
            android:id="@+id/score_p2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/default_score"
            android:textColor="@color/colorText"
            android:textSize="25sp"
            app:layout_constraintRight_toRightOf="@+id/name_p2"
            app:layout_constraintTop_toBottomOf="@id/name_p2" />

        <ImageView
            android:id="@+id/circle_white"
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:layout_marginRight="28dp"
            android:layout_marginTop="6dp"
            app:layout_constraintRight_toRightOf="@id/score_p2"
            app:layout_constraintTop_toTopOf="@id/score_p2"
            app:srcCompat="@drawable/ic_circle___white" />

        <ImageView
            android:id="@+id/cross_white"
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:layout_marginRight="28dp"
            android:layout_marginTop="6dp"
            app:layout_constraintRight_toRightOf="@id/score_p1"
            app:layout_constraintTop_toTopOf="@id/score_p1"
            app:srcCompat="@drawable/ic_cross____white"/>

        <TextView
            android:id="@+id/turn_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:textColor="@color/colorText"
            android:text="@string/turn_status"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            app:layout_constraintLeft_toLeftOf="@+id/score_p1"
            app:layout_constraintRight_toLeftOf="@id/circle_white"
            app:layout_constraintTop_toBottomOf="@id/circle_white"/>

        <TextView
            android:id="@+id/turn_player"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:textColor="@color/colorText"
            android:textSize="15sp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            app:layout_constraintLeft_toRightOf="@+id/turn_status"
            app:layout_constraintTop_toBottomOf="@id/circle_white"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="15dp"
        android:gravity="center">

        <Button
            android:id="@+id/button_00"
            style="@style/ButtonMain"
            android:layout_marginRight="20dp"/>
        <Button
            android:id="@+id/button_01"
            style="@style/ButtonMain"/>
        <Button
            android:id="@+id/button_02"
            style="@style/ButtonMain"
            android:layout_marginLeft="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:gravity="center">
        <Button
            android:id="@+id/button_10"
            style="@style/ButtonMain"
            android:layout_marginRight="20dp"/>
        <Button
            android:id="@+id/button_11"
            style="@style/ButtonMain"/>
        <Button
            android:id="@+id/button_12"
            style="@style/ButtonMain"
            android:layout_marginLeft="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <Button
            android:id="@+id/button_20"
            style="@style/ButtonMain"
            android:layout_marginRight="20dp"/>
        <Button
            android:id="@+id/button_21"
            style="@style/ButtonMain"/>
        <Button
            android:id="@+id/button_22"
            style="@style/ButtonMain"
            android:layout_marginLeft="20dp"/>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/button_reset"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_ver1"
            android:fontFamily="@font/montserrat"
            android:text="@string/reset"
            android:textAllCaps="false"
            android:textColor="@color/colorText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <Button
            android:id="@+id/button_new"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_ver1"
            android:fontFamily="@font/montserrat"
            android:text="@string/new_game"
            android:textAllCaps="false"
            android:textColor="@color/colorText"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/ai_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginTop="50dp"
        android:text="@string/default_score"
        android:textColor="@color/colorText"
        android:textSize="25sp"/>

</LinearLayout>